--- a/WebContent/addtransfercitizenship.xhtml
+++ b/WebContent/addtransfercitizenship.xhtml
@@ -75,6 +75,17 @@
 				    </b:selectOneMenu>
 				    <h:outputText value=" " rendered="#{rosteractionBean.is18safesport}"/>
 				    <h:outputText value=" " rendered="#{rosteractionBean.is18safesport}"/>
+					<h:outputText value="Loi Suspended?:" />
+					<b:selectOneMenu value="#{rosteractionBean.suspended}"
+									 large-screen="full-width"
+									 medium-screen="full-width"
+									 small-screen="full-width"
+									 tiny-screen="full-width"
+					>
+						<f:selectItem itemLabel="No" itemValue="N"/>
+						<f:selectItem itemLabel="Yes" itemValue="Y"/>
+					</b:selectOneMenu>
+
 				</b:panelGrid>
 				
 				
