--- a/WebContent/viewloi.xhtml
+++ b/WebContent/viewloi.xhtml
@@ -90,6 +90,12 @@
 			        </b:dataTableColumn> 
 				</b:dataTable>
 				<p:spacer width="10" height="10" />
+				<b:panelGrid colSpans="2,10" id="loisuspend" style="padding: 5;">
+					<h:outputText style="font-weight: bold;" value="Loi Suspended?:"/>
+					<h:outputText value="#{loiBean.displaysuspendloi}"/>
+					<h:outputText value="Note:"/>
+					<b:inputTextarea value="#{loiBean.notes}" rows="3" cols="100"/>
+				</b:panelGrid>
 				<b:panelGrid colSpans="4,2,2,2,2" rendered="#{loiBean.is18safesport}">
 					<h:outputText value="Player will be 18, has safesport been completed?:"/>
 					<h:outputText value="#{loiBean.safesportfor18display}"/>
