--- a/WebContent/viewcoachloi.xhtml
+++ b/WebContent/viewcoachloi.xhtml
@@ -115,7 +115,9 @@
 						<h:outputText value="#{coachloiBean.displaysafesport}"/>
 						<h:outputText style="font-weight: bold;" value="CAHA Screening Expires:" />
 						<h:outputText value="#{coachloiBean.screeningexpires}" />
-					</b:panelGrid>	
+						<h:outputText style="font-weight: bold;" value="Loi Suspended?:"/>
+						<h:outputText value="#{coachloiBean.suspended}"/>
+					</b:panelGrid>
 					<p:spacer width="10" height="10" />
 					<b:panelGrid colSpans="4,2,2,2,2">
 						<h:outputText style="font-weight: bold;" value=" "/>
