--- a/WebContent/editroster.xhtml
+++ b/WebContent/editroster.xhtml
@@ -30,8 +30,70 @@
 				<f:facet name="heading">
 					<h:outputText value="#{editrosterBean.teamname} Roster" />
 				</f:facet>
-				<div align="right"><b:commandButton value="View Scoresheets" id="viewscoresheet" ajax="true" action="#{editrosterBean.viewScoresheets()}" look="info"/></div>  
-				<b:dataTable 
+				<div align="right"><b:commandButton value="View Scoresheets" id="viewscoresheet" ajax="true" action="#{editrosterBean.viewScoresheets()}" look="info"/></div>
+				<!-- this is for the pdr/block recruitment section -->
+				<b:panel id ="pdrpanel" collapsible="true" look="primary">
+					<f:facet name="heading">
+						<h:outputText style="color: white;" value="PDR/Block Recruitment Numbers" />
+					</f:facet>
+
+					<b:panelGrid colSpans="6,6" id="pdrgrid" style="padding: 5;">
+						<b:dataTable
+								id="pdr"
+								var="player"
+								value="#{editrosterBean.getPdr()}"
+								searching="false"
+								editable="true"
+								select="true"
+								selectionMode="single"
+								paginated="false"
+						>
+							<b:dataTableColumn >
+								<f:facet name="header">
+									#
+								</f:facet>
+								<h:outputText value="#{player.getDob()}" style="font-weight: bold;" rendered="#{player.dob == 'Yes'}"/>
+								<h:outputText value="#{player.getDob()}" style="font-style: italic;" rendered="#{player.dob != 'Yes' and player.bitalics}"/>
+								<h:outputText value="#{player.getDob()}" rendered="#{player.dob != 'Yes' and not player.bitalics}"/>
+							</b:dataTableColumn>
+							<b:dataTableColumn >
+								<f:facet name="header">
+									Last Year Club
+								</f:facet>
+								<h:outputText value="#{player.getLastname()}" style="font-weight: bold;" rendered="#{player.lastname == 'PDR Met?'}" />
+								<h:outputText value="#{player.getLastname()}" style="font-style: italic;" rendered="#{player.lastname != 'PDR Met?' and player.bitalics}" />
+								<h:outputText value="#{player.getLastname()}" rendered="#{player.lastname != 'PDR Met?' and not player.bitalics}" />
+
+							</b:dataTableColumn>
+						</b:dataTable>
+
+						<b:dataTable
+								id="blockrec"
+								var="player"
+								value="#{editrosterBean.getBlockrecruitment()}"
+								searching="false"
+								editable="true"
+								select="true"
+								selectionMode="single"
+								paginated="false"
+						>
+							<b:dataTableColumn >
+								<f:facet name="header">
+									#
+								</f:facet>
+								<h:outputText value="#{player.getDob()}" />
+							</b:dataTableColumn>
+							<b:dataTableColumn >
+								<f:facet name="header">
+									Block Recruitment Violation Against Team
+								</f:facet>
+								<h:outputText value="#{player.getLastname()}" />
+							</b:dataTableColumn>
+						</b:dataTable>
+					</b:panelGrid>
+				</b:panel>
+				<br></br>
+				<b:dataTable
 					id="listofplayers"
 					var="player"
 					value="#{editrosterBean.getPlayers()}"
