updated all of the email templates to support the new season dates.

--- a/WebContent/mail/playeruploireceipt.html
+++ b/WebContent/mail/playeruploireceipt.html
@@ -50,7 +50,7 @@
 		<td>:ZIP:</td>
 	</tr>
 	<tr>
-		<td><b>2018-2019 Club:</b></td>
+		<td><b>2019-2020 Club:</b></td>
 		<td colspan="2">:LASTYEARCLUB:</td>
 		<td><b>Team:</b></td>
 		<td colspan="2">:LASTYEARTEAM:</td>
@@ -64,7 +64,7 @@
 	</tr>
 	<tr>
 		<td colspan="4">
-			In consideration of the above mentioned player to play outside of the player’s respective age group, the undersigned parent(s) or guardian(s) of the above player acknowledges and agrees to the following:
+			In consideration of the above mentioned player to play outside of the playerï¿½s respective age group, the undersigned parent(s) or guardian(s) of the above player acknowledges and agrees to the following:
 			<ul>
 				<li>Hockey is a contact sport and the age classifications are intended to ensure that players play with those of similar ability and physical development.</li>
 				<li>That the parent(s) or guardian(s) accept all responsibility of allowing the above named player to skate out of their age division.</li>
@@ -90,10 +90,10 @@
 	</tr>
 	<tr>
 		<td colspan="4">
-			This Letter of Intent expresses the above named player’s commitment to the named club for the above season. This commitment begins on the date signed by the player and continues until April 30, 2020. Any contested Letter of Intent shall be subject to the SCAHA Appeal Hearing process as outlined in the SCAHA Guidebook. Once this letter is signed, players may not tryout or participate with any other team/club in SCAHA for the subject season without a permanent or temporary release.
+			This Letter of Intent expresses the above named playerï¿½s commitment to the named club for the above season. This commitment begins on the date signed by the player and continues until April 30, 2021. Any contested Letter of Intent shall be subject to the SCAHA Appeal Hearing process as outlined in the SCAHA Guidebook. Once this letter is signed, players may not tryout or participate with any other team/club in SCAHA for the subject season without a permanent or temporary release.
 			<br></br>The signatures below signify that the player and parents understand and agree to the following as conditions of membership in SCAHA and the member club:
 			<ul>
-				<li>I have access to, and agree to be bound by the SCAHA Guidebook that contains the leagues bylaws, rules and regulations. The Guidebook is available at www.scaha.com. If I don’t have Internet access, the club will provide a printed copy of the Guidebook upon request.</li>
+				<li>I have access to, and agree to be bound by the SCAHA Guidebook that contains the leagues bylaws, rules and regulations. The Guidebook is available at www.scaha.com. If I donï¿½t have Internet access, the club will provide a printed copy of the Guidebook upon request.</li>
 				<li>All participants are subject to the USA Hockey Playing Rules, Bylaws and Codes of Conduct, the SCAHA Guidebook and the CAHA Guidebook.</li>
 				<li>Players, parents, spectators, coaches and all team officials will conduct themselves in a manner conducive to good sportsmanship by refraining from abusive, obscene or threatening language or gestures, physical violence, and any behavior that would be considered unsportsmanlike or would disrespect the game, its players, coaches, or officials.</li>
 				<li>Resolution of disputes shall be in accordance with and subject to the applicable SCAHA, CAHA and USA Hockey bylaws, rules and regulations.</li>
