updated displaying default coaches on printed scoresheets

--- a/WebContent/printscoresheet.xhtml
+++ b/WebContent/printscoresheet.xhtml
@@ -96,7 +96,7 @@ td {
 						<tr>
 							<td><p:spacer width="1"  /><h:outputText value= " #{spot.jerseynumber}" /></td>
 							<td> 
-								<p:spacer width="1"  /><h:outputText value=" #{spot.lastname} #{spot.firstname}" /><br></br>
+								<p:spacer width="1"  /><h:outputText value=" #{spot.firstname}, #{spot.lastname}" /><br></br>
 								<p:spacer width="1"  /><h:outputText value=" #{spot.cepinfo}" />
 								<br></br>
 								<br></br>
