--- a/WebContent/mail/penaltypush.html
+++ b/WebContent/mail/penaltypush.html
@@ -23,16 +23,21 @@ To All Concerned,
 	</tr>
 </table>
 <br><br>	
-The following player(s) from the :CLUBNAME: :TEAMNAME: team received the following penalties -
+The following participant(s) from the :CLUBNAME: :TEAMNAME: team received the following penalties -
 <br><bR>
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="2" cellspacing="0">
 	<tr>
-		<th>Player Name</th>
-		<th>Jersey</th>
+		<th>Participant Name</th>
+		<th>Suspension</th>
+		<th>Match</th>
 		<th>Penalty</th>
 	</tr>
 	:PENALTYROWS:
 </table>
+<br><br>
+Suspension(s) must be served in the following game(s):
+<br><br>
+:MUSTSERVE:
 <br><br>
 Sincerely,<p/>
 
