added email notification for removing, and updating suspensions with emails.

--- a/WebContent/editsuspensions.xhtml
+++ b/WebContent/editsuspensions.xhtml
@@ -58,7 +58,7 @@
 						
 					<b:commandButton value="Close" action="managesuspensionslist.xhtml" look="info"/>
 					<b:commandButton value="Remove Suspension" actionListener="#{editsuspensionBean.Removesuspension()}" look="success"/>
-					<b:commandButton value="Update Suspension and Email" actionListener="#{editsuspensionBean.UpdatesuspensionEmail()}" look="success"/>
+					<b:commandButton value="Update Suspension and Email" actionListener="#{editsuspensionBean.UpdatesuspensionWithEmail()}" look="success"/>
 					<b:commandButton value="Update Suspension No Email" actionListener="#{editsuspensionBean.Updatesuspension()}" look="success"/>
 				</b:panelGrid>
 			</b:panel>
